[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Components/c_object_pool_info.gd" type="Script" id=1]
[ext_resource path="res://Assets/unit_cube.tres" type="CubeMesh" id=2]
[ext_resource path="res://Assets/Materials/MAT_Dark.tres" type="Material" id=3]
[ext_resource path="res://Assets/Materials/MAT_Steel.tres" type="Material" id=4]
[ext_resource path="res://Assets/Materials/MAT_Red.tres" type="Material" id=5]
[ext_resource path="res://Prefabs/TrailEngine.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Curves/v_trail.tres" type="Curve" id=7]
[ext_resource path="res://Assets/Curves/g_medium.tres" type="Gradient" id=8]
[ext_resource path="res://Scripts/Components/c_effect_player.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Components/c_health.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Player/c_orbital_combat.gd" type="Script" id=11]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.376976, 0.319532, 1.42119 )

[node name="Orbital" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )

[node name="ObjectPoolInfo" type="Node" parent="."]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.252185, 0, 0, 0, 0.590828, 0, 0, 0, 0.253968, 0, 0.299916, 0 )
mesh = ExtResource( 2 )
material/0 = ExtResource( 3 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.977434, 0, 0, 0, 0.259381, 0.038432, 0, -0.0987673, 0.10093, 0, 0.213456, 0.0469028 )
mesh = ExtResource( 2 )
material/0 = ExtResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 0.416628, 0, 0, 0, 0.419659, 0.131693, 0, -0.171112, 0.322983, 0, 0.188852, 0.0423287 )
mesh = ExtResource( 2 )
material/0 = ExtResource( 5 )

[node name="MeshInstance4" type="MeshInstance" parent="."]
transform = Transform( 0.281031, 0, 0, 0, 0.283076, 0.130907, 0, -0.115421, 0.321055, 0, 0.113014, 0.1121 )
mesh = ExtResource( 2 )
material/0 = ExtResource( 4 )

[node name="Trail" parent="." instance=ExtResource( 6 )]
lifetime = 0.5
width_base = 0.4
shape = ExtResource( 7 )
gradient = ExtResource( 8 )
noise_size = 3.0
offset_noise_scale = 0.35
random_seed = true

[node name="Die Effect" type="Node" parent="."]
script = ExtResource( 9 )
effect_name = "Orbital Die"

[node name="Spawn Effect" type="Node" parent="."]
script = ExtResource( 9 )
effect_name = "Orbital Spawn"

[node name="Hitbox" type="Area" parent="." groups=[
"player",
]]
collision_layer = 1024
collision_mask = 2048

[node name="CollisionShape" type="CollisionShape" parent="Hitbox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.231713, 0 )
shape = SubResource( 1 )

[node name="Health" type="Node" parent="Hitbox"]
script = ExtResource( 10 )

[node name="Combat" type="Node" parent="."]
script = ExtResource( 11 )

[connection signal="pool_instantiate" from="ObjectPoolInfo" to="Spawn Effect" method="play_under"]
[connection signal="pool_instantiate" from="ObjectPoolInfo" to="Hitbox/Health" method="reset"]
[connection signal="pool_instantiate" from="ObjectPoolInfo" to="Trail" method="reset_trail"]
[connection signal="die" from="Hitbox/Health" to="Die Effect" method="play"]
[connection signal="die" from="Hitbox/Health" to="ObjectPoolInfo" method="remove_from_scene" flags=3]
[connection signal="die" from="Hitbox/Health" to="ObjectPoolInfo" method="set_pool_available"]
